Bug 506402 - Buttons in Enter Schedule dialog impossible to reach with keyboard
Summary: Buttons in Enter Schedule dialog impossible to reach with keyboard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-30 17:38 UTC by Ingo Klöcker
Modified: 2025-07-02 18:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ingo Klöcker 2025-06-30 17:38:39 UTC
In the Enter Schedule dialog all UI elements should be focusable by pressing Tab.

STEPS TO REPRODUCE
1. Enter the next transaction of a (due) scheduled transaction
2. Try to navigate to the Enter button with the keyboard

OBSERVED RESULT
It's impossible to give keyboard focus to the Enter button (or Help or Cancel) by pressing Tab (or Shift+Tab).

EXPECTED RESULT
Keyboard focus can be passed to all UI elements in the Enter Schedule dialog.

In the normal transaction editor the buttons can be given focus.
Comment 1 Thomas Baumgart 2025-07-02 17:21:49 UTC
Git commit 967a79407cd97c1ce4b827748a1ac7658389a749 by Thomas Baumgart.
Committed on 02/07/2025 at 17:01.
Pushed by tbaumgart into branch '5.2'.

Allow keyboard access to buttons in enter schedule dialog
FIXED-IN: 5.2.1

M  +84   -0    kmymoney/views/kenterscheduledlg.cpp
M  +3    -0    kmymoney/views/kenterscheduledlg.h

https://invent.kde.org/office/kmymoney/-/commit/967a79407cd97c1ce4b827748a1ac7658389a749
Comment 2 Thomas Baumgart 2025-07-02 18:20:55 UTC
Git commit dbd1228a5acdd76de8e424c9057a2996ae9e39f8 by Thomas Baumgart.
Committed on 02/07/2025 at 17:22.
Pushed by tbaumgart into branch 'master'.

Allow keyboard access to buttons in enter schedule dialog
FIXED-IN: 5.2.1
(cherry picked from commit 967a79407cd97c1ce4b827748a1ac7658389a749)

M  +84   -0    kmymoney/views/kenterscheduledlg.cpp
M  +3    -0    kmymoney/views/kenterscheduledlg.h

https://invent.kde.org/office/kmymoney/-/commit/dbd1228a5acdd76de8e424c9057a2996ae9e39f8