Allow keyboard access to buttons in enter schedule dialog

BUG: 506402
FIXED-IN: 5.2.1
(cherry picked from commit 967a79407cd97c1ce4b827748a1ac7658389a749)